--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>UPSista keikkaa</title>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
     <h1>Postari tsekkari</h1>
-    <form>
+    <form id="input">
         <label for="postalCode">Anna postari:</label>
         <input type="text" id="postalCode" name="postalCode">
         <button type="submit">Submit</button>
