--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <h1>Postari tsekkari</h1>
     <form id="input">
         <label for="postalCode">Anna postari:</label>
-        <input type="text" id="postalCode" name="postalCode">
+        <input type="text" id="postalCode" name="postalCode" required>
         <button type="submit">Submit</button>
     </form>
     <div id="result"></div>
