--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <h1>Postari tsekkari</h1>
     <form id="input">
-        <label for="postalCode">Anna postari:</label>
+        <label for="postalCode">GIVE POSTAL CODE:</label>
         <input type="text" id="postalCode" name="postalCode" required>
         <button type="submit">Submit</button>
     </form>
